--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,24 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" sizes="76x76" href="public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="public/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="public/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="public/favicon-16x16.png"
+    />
     <link rel="shortcut icon" href="public/favicon.ico" />
     <link rel="icon" href="public/favicon.ico" />
 
